feat: Add logic new Excel
